[package]
name = "hackernews"
version = "0.1.0"
edition = "2021"
author = "anfelo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
